persist data in database